add Java API safety check and PR comments